  - Sort readdir() output in conf.pl (#1755886).
  - Fix message cache in printer friendly, thanks Tomas Kuliavas.
  - Made the webmail_top hook work again for plugins that want to change
    the URI of the "right" frame; plugins have to change the value of the
    global variable $right_frame_url
  - Fix issue in darkness theme with extra closing bracket.

Version 1.4.10a - 10 May 2007
-----------------------------
  - Fix regression in compose: when no alternative identities have been
    defined, the From header would be incorrect. 

Version 1.4.10 - 9 May 2007
---------------------------
  - Drop obsolete ORDB RBL from filters plugin (#1629398).
  - Fix HTML glitches (#1608798, #1628639, #1521389, #1548394, #1704686).
  - Reduce (largely theoretical) chance of reusing existing attachment
    filenames.
  - Fix rare bug in forwarding as attachment from some search results.
  - Add warning about magic_quotes_* in configtest.
  - Unify accepted versions for imap_server_type and set_defaults (#1629722).
  - Fix for wrong $_SERVER['REQUEST_URI'] value causing wrong links
    in the [more] and [less] links in read_body.php.
  - Update for switch from CVS to Subversion.
  - Fix URL to send read receipts from read_body (#1637572).
  - Fix for high memory usage when forwarding messages with attachments.
  - Fix for filename extraction from attachments.
  - Fix reply to all duplicating the address from Reply-To.
  - Drop redundant call to session_register, which could trigger a segfault
    in PHP 4.4.5 (#1664155).
  - Make compose use get_identities() rather than fiddling with identities
    by itself, resolving a problem in the listcommands plugin (#1663762).
  - If a date-header cannot be parsed, display the unparsed version as a
    better-than-nothing alternative.
  - Fix "Unknown Sender" on message after reading a digest (#1673047).
  - Fix Priority and Receipt compose options being reset after return from
    HTML addressbook (#1673056).